--- a/portfolio.html
+++ b/portfolio.html
@@ -55,7 +55,7 @@
       >
         <span class="navbar-toggler-icon"></span>
       </button>
-      <section class="collapse navbar-collapse" id="navbarText">
+      <div class="collapse navbar-collapse" id="navbarText">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item active">
             <a class="nav-link" href="index.html" style="color: white"
@@ -73,19 +73,19 @@
             >
           </li>
         </ul>
-      </section>
+      </div>
     </nav>
 
-    <section class="container">
-      <section class="row">
-        <section class="col-md-12">
-          <section class="page header">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-12">
+          <div class="page header">
             <h1 id="header">Portfolio</h1>
             <hr />
-          </section>
-        </section>
-      </section>
-    </section>
+          </div>
+        </div>
+      </div>
+    </div>
 
     <div class="container">
       <div class="row">
